<?xml version="1.0"?>
<package format="3">
  <name>nanopb</name>
  <version>0.0.1</version>
  <description>Nanopb runtime library for embedded protobuf in C.</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
